[project]
name = "aleph-alpha-client"
authors = [{ name = "Aleph Alpha" }]
description = "Client to interact with Aleph Alpha API"
readme = "README.md"
version = "2.4.1"
dependencies = ["requests"]

[build-system]
requires = ["setuptools ~= 58.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pytest-dotenv", "pytest-httpserver"]
types = ["mypy", "types-requests"]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-dotenv",
    "pytest-httpserver",
    "mypy",
    "types-requests",
    "nbconvert",
    "ipykernel",
    "black",
]


[project.license]
file = "LICENSE"

[project.urls]
repository = "https://github.com/Aleph-Alpha/aleph-alpha-client"
changelog = "https://github.com/Aleph-Alpha/aleph-alpha-client/blob/main/Changelog.md"